# myeditor

./: .gitignore  .travis.yml  LIFO.c  LIFO.h  Makefile.am  README.md  configure.ac  main.c  myedit
src/: LIFO.c  LIFO.h  main.c
tests/: LIFO.c  LIFO.test  Makefile.am
